@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/libical
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libical/ChangeLog,v 1.54 2009/11/12 10:45:38 pva Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libical/ChangeLog,v 1.55 2010/08/19 19:52:24 dagger Exp $
+
+*libical-0.44-r1 (19 Aug 2010)
+
+  19 Aug 2010; Robert Piasek <dagger@gentoo.org> -libical-0.44.ebuild,
+  +libical-0.44-r1.ebuild:
+  If errors are fatal, some software can segfault.
 
 *libical-0.44 (12 Nov 2009)
 
